Closed Bug 1364442 Opened 7 years ago Closed 7 years ago

Profiler JSON is broken depending on the OS locale because float values (used for minor GC timing) can use the wrong decimal separator

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: mstange, Assigned: sfink)

References

Details

(Keywords: regression)

Attachments

(2 files)

Excerpt of broken JSON:

>  "Total":2058,353000,
>  "CancelIonCompilations":0,000000,
>  "TraceValues":0,000000,
My OS is french (my Firefox isn't though :) ). In french we use commas as decimal separators, so could this be a locale problem ?
Launching Firefox with LC_ALL=C makes it work.
Ditto bug 1364347 - LC_ALL=C fixes the problem there.
Summary: Profiler JSON is broken depending on the OS locale because TimeDuration values can use the wrong decimal separator → Profiler JSON is broken depending on the OS locale because float values (used for minor GC timing) can use the wrong decimal separator
Argh, sorry. The stuff I use for the major GCs handles this explicitly already, and I should have known better when I saw the %f. I will fix.
MozReview-Commit-ID: 3hFObaoD094
Attachment #8867262 - Flags: review?(jcoppeard)
Assignee: nobody → sphink
Status: NEW → ASSIGNED
Attachment #8867262 - Flags: review?(jcoppeard) → review+
Pushed by sfink@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/ef32458f11b8
Remove more locale-sensitive JSON output paths, r=jonco
https://hg.mozilla.org/mozilla-central/rev/ef32458f11b8
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: