Bug 1364442 - Remove more locale-sensitive JSON output paths, r=jonco

MozReview-Commit-ID: 1k3DIXGAW8s